Prije refaktoringa konekcije